# distload

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: architecture.rst  conf.py  index.rst  quickstart.rst
docs/source/_static/: custom.css
docs/source/api/: broker.rst  client.rst  config.rst  dataset.rst  index.rst  mediums.rst  worker.rst
docs/source/notebooks/: basic_distillation.ipynb  model_switching.ipynb
softlabels/: __init__.py  configs.py  dataset.py
softlabels/market/: __init__.py  broker.py  client.py  protocol.py  supplier.py
softlabels/market/mediums/: __init__.py  base.py  filesystem.py  shm.py  tcp.py
tests/: conftest.py  test_broker.py  test_filesystem_medium.py  test_integration.py  test_protocol.py  test_shm.py  test_tcp_medium.py
