[project]
name = "distload"
version = "0.1.0"
description = ""
authors = [
    {name = "Ayoub G.",email = "git@ayghri.me"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "distload", from = "./"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
